[gd_scene format=3 uid="uid://bcharsel001"]

[ext_resource type="Script" path="res://scripts/menus/CharacterSelection.gd" id="1_cs"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cs")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HeaderLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Choose Your Pilgrim"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="MalePanel" type="PanelContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 320)
layout_mode = 2

[node name="MaleVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/MalePanel"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="MaleSprite" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/MalePanel/MaleVBox"]
custom_minimum_size = Vector2(180, 240)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="MaleLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MalePanel/MaleVBox"]
layout_mode = 2
text = "Male Pilgrim"
horizontal_alignment = 1

[node name="FemalePanel" type="PanelContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 320)
layout_mode = 2

[node name="FemaleVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/FemalePanel"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="FemaleSprite" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer/FemalePanel/FemaleVBox"]
custom_minimum_size = Vector2(180, 240)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="FemaleLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/FemalePanel/FemaleVBox"]
layout_mode = 2
text = "Female Pilgrim"
horizontal_alignment = 1

[node name="ButtonBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonBox"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
text = "Back"

[node name="ConfirmButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonBox"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
text = "Confirm"
